# PandoraNextTools

./: .dockerignore  CHANGELOG.md  README.md  docker-compose.yml
backends/: pnts.dockerfile
backends/src/: .gitignore  pyproject.toml  requirements.txt
backends/src/docker/: docker-entrypoint.sh  sources.list
backends/src/pnts/: __init__.py  cmdline.py  manage.py
backends/src/pnts/apps/: __init__.py
backends/src/pnts/apps/core/: __init__.py  apps.py  models.py  response.py  status.py
backends/src/pnts/apps/permission/: __init__.py  apps.py
backends/src/pnts/apps/permission/migrations/: 0001_initial.py
backends/src/pnts/apps/pnm/: __init__.py  apps.py  urls.py
backends/src/pnts/apps/pnm/managers/: __init__.py  tokens.py
backends/src/pnts/apps/pnm/migrations/: __init__.py
backends/src/pnts/apps/pnm/views/: base.py
backends/src/pnts/conf/: __init__.py  config.example.py
backends/src/pnts/core/: __init__.py
backends/src/pnts/pnts/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backends/src/pnts/utils/: __init__.py
backends/src/pnts/utils/ssh/: __init__.py  func.py  mgr.py
backends/src/scripts/: requirements_export.sh
docker_conf/api/: .env.example
docker_conf/db/: .env.example
frontends/src/pnts/: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.paths.json
frontends/src/pnts/src-tauri/: Cargo.toml  tauri.conf.json
frontends/src/pnts/src-tauri/src/: main.rs
frontends/src/pnts/src/app/: robots.ts
mnt/cache/conf/: redis.conf.example  users.acl.example
