[package]
name = "pnts"
version = "0.0.1"
description = "Use PandoraNext Easier"
authors = ["delph1s <admin@delph1s.com>"]
repository = "https://github.com/delph1s/PandoraNextTools"
license = "MIT"
#default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "http-all", "app-all", "cli", "clipboard-all", "devtools", "dialog-all", "fs-all", "global-shortcut", "global-shortcut-all", "macos-private-api", "notification-all", "os-all", "path-all", "process-all", "protocol-all", "shell-all", "system-tray", "window-all"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
#default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
